--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,7 @@
 body{
     width: 100%;
     height: 100vh;
-    background: #333;
+    /* background: #333; */
     display: flex;
     align-items: center;
     justify-content: center;
@@ -43,3 +43,35 @@ body{
     align-items: center;
 }
 
+#containerBase{
+    display: flex;
+    width: 100vw;
+    justify-content: space-between;
+}
+.style1{
+    position: relative;
+    top: 0;
+    left: 0;
+    width: 600px;
+    height: 100vh;
+    border-radius: 100% 0% 100% 0% / 0% 73% 27% 100% ;
+    background: rgba(142, 68, 173,0.4);
+}
+.style2{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 600px;
+    height: 100vh;
+    border-radius: 39% 61% 100% 0% / 0% 30% 70% 100%  ;
+    background: rgba(142, 68, 173,0.4);
+}
+.style3{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 600px;
+    height: 100vh;
+    border-radius: 84% 16% 100% 0% / 28% 100% 0% 72%   ;
+    background: rgba(142, 68, 173,0.4);
+}
