--- a/css/style.css
+++ b/css/style.css
@@ -113,14 +113,72 @@ body{
     width: 100vw;
     height: 100vh;
     display: flex;
-    justify-content: space-between;
+    justify-content: space-evenly;
+    align-items: center;
+    background: rgb(255,194,235);
+    background: linear-gradient(133deg, rgba(255,194,235,1) 0%, rgba(139,101,186,1) 54%, rgba(56,21,105,1) 100%);
 }
 #containerForm{
     width: 500px;
-    height: 100vh;
+    height: 80vh;
     background:url("../assets/images/background.jpg") no-repeat center/cover;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
 }
 #containerUsers{
-    width: 500px;
+    width: 800px;
     height: 100vh;
+}
+
+table{
+    width: 800px;
+    margin-right: 25px;
+}
+.btn-light{
+    background-color: #36056d!important;
+    color: #f1f1f1!important;
+}
+#current{
+    text-align: center;
+    margin-top: 50px;
+    font-size: 70px;
+    color: #490c8f;
+    font-family: 'Redressed', cursive;
+}
+table a{
+    color:#ffc2eb
+}
+td{
+    font-family: 'Roboto Condensed', sans-serif;
+    color: #f1f1f1;
+    text-shadow: 1px 1px 0px #000, -1px 1px 0px #000,-1px -1px 0px #000,1px -1px 0px #000;
+}
+h1{
+    font-family: 'Redressed', cursive;
+    font-size: 70px;
+}
+.inp{
+    width: 400px;
+    height: 50px;
+    border-radius: 9999px;
+    outline: none;
+    border: none;
+    padding: 0 25px;
+    font-family: 'Roboto Condensed', sans-serif;
+    font-size: 20px;
+    border: 2px solid #490c8f;
+    color: #490c8f;
+
+ }
+ .inp:focus{
+     box-shadow: rgb(159 104 221) 5px 5px 20px 0px, rgb(159 104 221) -5px -5px 20px 0px, rgb(159 104 221) -5px 5px 20px 0px, rgb(159 104 221) 5px -5px 20px 0px;
+ }
+#arrangeForm{
+    height: 80vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
 }
