--- a/css/style.css
+++ b/css/style.css
@@ -182,3 +182,18 @@ h1{
     justify-content: space-evenly;
     align-items: center;
 }
+
+#verifPin{
+    font-size: 15px;
+    text-align: center;
+    background-color: #f1f1f1;
+    margin-top: 15px;
+    height: 30px;
+    width: 400px;
+    color: red;
+    border: 2px solid red;
+    border-radius: 999px;
+    line-height: 30px;
+    font-weight: bold;
+    display: none;
+}
